--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 out/
 target/
-obj/
 .idea/
+
 bin/
 obj/
 Properties/
@@ -15,14 +15,17 @@ Properties/
 *.config
 *.csproj
 
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
 *.jar
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.sdf
+Debug/
+*.exe
+*.ilk
+*.pdb
+*.obj
+*.vcxproj
+*.filters
+*.props
